tester release til github package registry (#7)
* tester release til github package registry

* prøver å fikse byggfeil

* unngår å bruke test som postfiks

* prøver ny artifactid bare for å teste

* Revert "prøver ny artifactid bare for å teste"

This reverts commit cbf3bf31e2c11511472ea0469d36f540bef7a3ad.

* debug

* fjerner store bokstaver

* fjerner test-endringer

* fjerner debug